"""Example of using helm_tools with local charts."""

load("@helm_tools//:defs.bzl", "helm_release")

# Deploy a local chart from your repository
helm_release(
    name = "local_app",
    timeout = "5m",
    chart = ":chart",  # Reference to local chart directory
    create_namespace = True,
    namespace = "local-example",
    values_file = ":values.yaml",
    wait = True,
    release_name = "local-app",  # Release names must use hyphens, not underscores
)

# Example with generated values file
genrule(
    name = "generate_values",
    srcs = ["values.template.yaml"],
    outs = ["generated_values.yaml"],
    cmd = """
        cat $< | sed 's/{{VERSION}}/1.0.0/g' > $@
    """,
)

helm_release(
    name = "templated_app",
    atomic = True,  # Rollback on failure
    chart = ":chart",
    create_namespace = True,
    namespace = "templated-example",
    values_file = ":generate_values",
    release_name = "templated-app",  # Release names must use hyphens, not underscores
)

# Export chart directory for use by helm_release
filegroup(
    name = "chart",
    srcs = glob([
        "chart/**/*",
    ]),
    visibility = ["//visibility:public"],
)

# Values file
exports_files([
    "values.yaml",
    "values.template.yaml",
])
